tests/common/positive/primary/52_deep_self_call.fc
@@target c
@@skip
// Skip: C does not support @@:self (no reentrant dispatch)

@@system DeepSelfCallTest {
    interface:
        dummy(): int

    machine:
        $Active {
            dummy(): int {
                @@:(0)
            }
        }
}

int main() {
    printf("SKIP: deep_self_call -- C does not support @@:self\n");
    return 0;
}
