tests/common/compile-error/01_domain_frame_syntax.fc
@@target c

// NEGATIVE TEST: Domain uses Frame syntax (var) which is invalid in C
// Expected: Compile error in generated C code

@@system NegativeTest {
    machine:
        $Ready { }
    domain:
        var count = 0
}

int main() { return 0; }
